--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,12 @@ body {
     /* margin: 0 auto; */
 }
 
+ul {
+    padding-inline-start: 0px;
+}
+
 .list-item {
     list-style: none;
+    display: flex;
+    justify-content: space-between;
 }
